[metadata]
name = epicsmonmtca
description = Integrate sensors from a MTCA system in a python soft IOC
license = Apache License 2.0
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = False
install_requires =
    softioc
    python-ipmi
    cothread

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
console_scripts =
    emm-create-manifest = epicsmonmtca.cli.create_manifest:main
    emm-create-edm = epicsmonmtca.cli.create_edm:main
    emm-create-grp = epicsmonmtca.cli.create_grp:main
    emm-ioc = epicsmonmtca.cli.ioc:main
